@@ -189,6 +189,7 @@ public abstract class AsynchronousSteppable
         this.state = state;
         state.addToAsynchronousRegistry(this);
         thread = new Thread(new Runnable() { public void run() { AsynchronousSteppable.this.run(false); } });
+		thread.setDaemon(true);
         thread.setName("Asynchronous Steppable: " + this);
         thread.start();
         }
