@@ -17,24 +17,38 @@ package sim.engine;
     you've set their shouldSynchronize value to true, and elsewhere in your
     embedded steppables you're synchronizing on the random number generator.
     
-    <!-- This is false: we're doing wait(), which releases locks held.
-    <p>Also, keep in mind that the main thread which fired the ParallelSequence is still
-    holding onto the schedule lock; thus inside the ParallelSequence threads you can't
-    schedule anything (the Schedule is synchronized).
-    -->
-
     <p>ParallelSequences are lightweight: they reuse the same threads
     if stepped repeatedly.  This means that you must never attach a ParallelSequence
     inside itself -- that'd be an infinite loop, but it also would create weird thread
     errors.
     
-    <p>Because ParallelSequences are lightweight, their threads are persistent -- even
-    after your main() loop exits!  So if you use ParallelSequences, you have to remember to call
-    System.exit(0); to exit your program instead.
-    
     <p>While ParallelSequences might LOOK cool, generally speaking the only time you should
     ever think to use them is if you actually HAVE multiple CPUs on your computer.  Otherwise
     they're almost certainly not the solution to your odd multiple-thread needs.
+
+<!-- This is no longer true: we're now setting the thread to be a daemon thread
+    <p><b>Important Note 1:</b>
+	Because ParallelSequences are lightweight, their threads are persistent -- even
+    after your main() loop exits!  So if you use ParallelSequences, you have to remember to call
+    System.exit(0); to exit your program instead.
+-->
+
+	<p><b>Important Note</b>
+	Because ParallelSequences are lightweight, their threads are persistent, even after your step()
+	method has completed (this allows them to be reused for the next step() method.  If the ParallelSequence
+	is garbage collected, we automatically delete all its threads in its finalize() method.  And that's the
+	rub: even if you get rid of your ParallelSequence, it's often the case that its garbage collection is
+	delayed, or even that the VM will <i>never</i> garbage collect it.
+	
+	<p>Thus when you're done with your ParallelSequence and wish to throw it away, you should always
+	call <b>cleanup()</b>, which deletes the threads manually.  Otherwise the thread resources will leak
+	and quickly consume all your available memory.
+	
+	<p>Alternatively you can call <b>setDestroysThreads(true)</b>  on your ParallelSequence.  This will
+	cause the ParallelSequence to destroy its threads every single time the ParallelSequence's step()
+	method completes.  This is expensive but you don't have to keep track of the ParallelSequence
+	at the end of the run to call cleanup() on it.  It's not a bad idea for a ParallelSequence which
+	is one-shot rather than repeating.
 */
 
 public class ParallelSequence extends Sequence
@@ -44,7 +58,11 @@ public class ParallelSequence extends Sequence
     Thread[] threads;
     boolean pleaseDie = false;
     boolean operating = false;  // checking for circularity
-    
+    boolean destroysThreads = false;
+
+	public boolean getDestroysThreads() { return destroysThreads; }
+	public void setDestroysThreads(boolean val) { destroysThreads = val; }
+	
     /// Threads are not serializable, so we must manually rebuild here
     private void writeObject(java.io.ObjectOutputStream p)
         throws java.io.IOException
@@ -74,6 +92,7 @@ public class ParallelSequence extends Sequence
         for (int i = 0; i < steps.length; i++)
             {
             threads[i] = new Thread( workers[i] );
+			threads[i].setDaemon(true);
             threads[i].start();
             }
         }
@@ -89,10 +108,21 @@ public class ParallelSequence extends Sequence
             catch (InterruptedException e) { /* shouldn't happen */ }
         threads = null;
         }
+		
+	/** Call this just before you get rid of a ParallelSequence: for example, one good place is the stop() method of
+		your simulation.  Never call this method inside the ParallelSequence's own step() method.  This method
+		deletes the threads so the ParallelSequence is ready to be thrown away.  We also do this in
+		finalize() but finalize() is not guaranteed to be called at any particular time, which can result in
+		unexpected memory leaks.  Think of this method as the same kind of thing as a Graphics or 
+		Window's dispose() method.  */
+	public void cleanup()
+		{
+		gatherThreads();
+		}
 
     protected void finalize() throws Throwable
         {
-        try { gatherThreads(); } 
+        try { cleanup(); } 
         finally { super.finalize(); }
         }
 
@@ -109,6 +139,8 @@ public class ParallelSequence extends Sequence
     // steps once (in parallel) through the steppable things
     public void step(final SimState state)
         {
+		if (threads == null) buildThreads();
+		
         // just to be safe, we'll avoid the HIGHLY unlikely race condition of being stepped in parallel or nested here
         synchronized(workers)  // some random object we own
             {
@@ -128,6 +160,8 @@ public class ParallelSequence extends Sequence
             semaphore.P();
         // don't need to synchronize to turn operating off
         operating = false;
+		
+		if (destroysThreads) cleanup();
         }
 
     // a small semaphore class
